fixing heroku sleep, small screen width, height and overflow

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,13 @@ p {
 html {
   width: 100%;
   height: 100%;
+  overflow: scroll;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+html::-webkit-scrollbar {
+  display: none;
 }
 
 body {
@@ -102,7 +109,8 @@ section {
   /* width: min(100%, 67rem); */
   /* min-width: 90%; */
   max-width: 67rem;
-  height: 150px;
+  /* height: 150px; */
+  height: auto;
   transition: all 300ms;
   /* background:
       radial-gradient(circle farthest-side at 0% 50%,#fb1 23.5%,rgba(240,166,17,0) 0)21px 30px,
@@ -227,7 +235,7 @@ section {
 
 .lboard-bg {
   height: 31.25rem;
-  width: min(90%, 68rem);
+  width: min(95%, 68rem);
   border-radius: 0.5rem;
   background-color: rgba(255, 255, 255, 0.3);
   -webkit-backdrop-filter: blur(10px);
@@ -312,6 +320,7 @@ td {
   }
 
   .btn-close-lboard {
-    left: 43%;
+    left: 45%;
+    top: -7%;
   }
 }
